--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "tsc"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "17.0.15",
+    "@types/nunjucks": "^3.2.1",
     "@typescript-eslint/eslint-plugin": "5.10.2",
     "@typescript-eslint/parser": "5.10.2",
     "eslint": "8.8.0",
@@ -52,5 +54,10 @@
         }
       ]
     }
+  },
+  "dependencies": {
+    "express": "^4.17.3",
+    "mongodb": "^4.4.0",
+    "nunjucks": "^3.2.3"
   }
 }
